<resources>
    <string name="app_name">Rajshahi Transport Management System</string>
    <string name="welcome_note">Welcome to Rajshahi Transport Management System!</string>
    <string name="credit">© Rajshahi University of Engineering and Technology</string>
    <string name="menu_text">Choose Transport</string>
    <string name="bus_button">BUS</string>
    <string name="train_button">TRAIN</string>
    <string name="air_button">AIRWAY</string>
    <string name="ep_button">EMERGENCY &amp; PRIVATE</string>
    <string name="exit_button">EXIT</string>
    <string name="AS_phn">+88-01716-129375</string>
    <string name="Ambulance_Service">Ambulance Service, Rajshahi</string>
    <string name="medical_college_ambulance">Medical College Ambulance</string>
    <string name="_776000_9">776000-9</string>
    <string name="paba_medical_hospital_ambulance">Paba Medical Hospital Ambulance</string>
    <string name="_775709">775709</string>
    <string name="service_company">Service Company</string>
    <string name="phone">Phone</string>
    <string name="ambulance_service_">Ambulance Service</string>
    <string name="police_hospital_ambulance">Police Hospital Ambulance</string>
    <string name="_774308">774308</string>
    <string name="sadar_hospital_ambulance">Sadar Hospital Ambulance</string>
    <string name="_775863">775863</string>
    <string name="t_b_hospital_ambulance">T.B Hospital Ambulance</string>
    <string name="_774558">774558</string>
    <string name="university_medical_ambulance">University Medical Ambulance</string>
    <string name="_750169">750169</string>
    <string name="schedule">Schedule</string>
    <string name="price">Ticket Price</string>
    <string name="train">Train</string>
    <string name="mail_train">Mail Train</string>
    <string name="intercity_train">Intercity Train</string>
    <string name="train_id">T. No</string>
    <string name="train_name">T. Name</string>
    <string name="offday">Off Day</string>
    <string name="arrival">Arrive</string>
    <string name="departure">Depart</string>
    <string name="to">To</string>
    <string name="_716">716</string>
    <string name="khulna">Khulna</string>
    <string name="tuesday">Tuesday</string>
    <string name="_20_10">20:10</string>
    <string name="_14_15">14:15</string>
    <string name="kapotaksha_express">Kapotaksha Exp.</string>
    <string name="sunday">Sunday</string>
    <string name="chilahati">Chilahati</string>
    <string name="dhaka">Dhaka</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="rajshahi_express">Rajshahi Exp.</string>
    <string name="chapai">Chapai</string>
    <string name="no">No</string>
    <string name="iswardi">Iswardi</string>
    <string name="mohananda_express">Mohananda Exp.</string>
    <string name="rohanpur_commuter">Rohanpur Com.</string>
    <string name="rohanpur">Rohanpur</string>
    <string name="destination">Destination</string>
    <string name="joydevpur">Joydevpur</string>
    <string name="price_taka">Price (Taka)</string>
    <string name="airline">Airline</string>
    <string name="duration">Duration</string>
    <string name="_45m">45m</string>
    <string name="us_bangla_airlines_bs_162">US-Bangla Airlines (BS 162)</string>
    <string name="novo_air_vq_990">Novo Air(VQ 990)</string>
    <string name="us_bangla_airlines_bs_164">US-Bangla Airlines (BS 164)</string>
    <string name="novo_air_vq_994">Novo Air(VQ 994)</string>
    <string name="chottogram">Chottogram</string>
    <string name="novo_air_vq_994_917">Novo Air(VQ 994, 917)</string>
    <string name="sylhet">Sylhet</string>
    <string name="cox_s_bazar">Coxs Bazar</string>
</resources>
