<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Emergency">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambulance_service_"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textColorHighlight="@color/white"
        android:textIsSelectable="true"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
    <TableRow>
        <TextView
            android:text="@string/service_company"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
        <TextView
            android:text="@string/phone"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/Ambulance_Service"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/AS_phn"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/medical_college_ambulance"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/_776000_9"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/paba_medical_hospital_ambulance"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/_775709"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/police_hospital_ambulance"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/_774308"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/sadar_hospital_ambulance"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/_775863"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/t_b_hospital_ambulance"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/_774558"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/university_medical_ambulance"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/_750169"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textIsSelectable="true"
            />
    </TableRow>


</TableLayout>