<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainPrice">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textColorHighlight="@color/white"
        android:textIsSelectable="true"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
    <TableRow>
        <TextView
            android:text="@string/destination"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
        <TextView
            android:text="@string/price_taka"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/dhaka"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="820/560/340"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/joydevpur"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="790/530/310"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>

</TableLayout>