<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainIntercity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intercity_train"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textColorHighlight="@color/white"
        android:textIsSelectable="true"
        android:textAllCaps="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
    <TableRow>
        <TextView
            android:text="@string/train_id"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
        <TextView
            android:text="@string/train_name"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
        <TextView
            android:text="@string/to"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
        <TextView
            android:text="@string/departure"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
        <TextView
            android:text="@string/arrival"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
        <TextView
            android:text="@string/offday"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#f1f1f1"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/_716"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/kapotaksha_express"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/khulna"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/_14_15"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/_20_10"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/tuesday"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="731"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="Barandra Express"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/chilahati"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="15:00"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="21:25"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/sunday"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="754"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="Silkcity Express"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/dhaka"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="7:40"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="13:30"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/sunday"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="760"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="Padma Express"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/dhaka"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="16:00"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="21:40"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/tuesday"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="762"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="Sagordari Express"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/khulna"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="6:40"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="12:20"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/monday"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="770"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="Dhumketu Express"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/dhaka"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="23:20"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="4:45"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/wednesday"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:text="792"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="Banalata Express"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/dhaka"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="7:00"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="11:30"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
        <TextView
            android:text="@string/friday"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            />
    </TableRow>

</TableLayout>