<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".BusMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/air_button"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textColorHighlight="@color/white"
        android:textAllCaps="true"  />
    <Button
        android:id="@+id/air_schedule"
        android:padding="7dp"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:onClick="popup"/>
    <Button
        android:id="@+id/air_price"
        android:padding="7dp"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:onClick="popup"/>


</LinearLayout>